day 3 6/5/24 fix whitespace under slideshow

--- a/styles.css
+++ b/styles.css
@@ -87,13 +87,15 @@ body {
 /*slideshow*/
 
 .container {
-    height: 85vh;
+    height: 600px;
+    max-height: 100%;
     overflow: hidden;
 }
 
 .mySlides img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 600px;
+    overflow: hidden;
 }
 
 /* Add a pointer when hovering over the thumbnail images */
@@ -106,7 +108,7 @@ body {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 40%;
   width: auto;
   padding: 16px;
   margin-top: -50px;
@@ -129,14 +131,6 @@ body {
 .prev:hover,
 .next:hover {
   background-color: rgba(255, 255, 255, 0.8);
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
 }
 
 .row:after {
@@ -172,9 +166,7 @@ body {
 .ramen_preview_section {
     color: mintcream;
     text-align: center;
-    margin: 0;
     overflow: hidden;
-    padding: 0;
     background: black;
 }
 #ramen_preview_title {
@@ -193,7 +185,7 @@ body {
 
 .slider img {
     width: 13%;
-    height: 57%;
+    height: 60%;
     position: relative;
     margin: 0 0 0 auto;
     padding: 5% 5%;
